appId: ${appId}
onFlowStart:
  - runFlow: ../../env.yaml
---
- launchApp:
    clearState: true
    permissions: 
        all: allow

- runFlow: ../subFlows/FillName.yaml
- runFlow: ../subFlows/SelectSchedule.yaml

# Skip Location step with the defaults
- assertVisible: ${titleNewHabitLocation}
- tapOn: ${buttonNewHabitNext}

# Create Habit
- assertVisible: ${buttonNewHabitCreate}
- tapOn: ${buttonNewHabitCreate}
- assertVisible: ${buttonHomeAdd}
- assertVisible: ${output.habitName}

- runFlow: ../../common/calendar/OpenSystemCalendar.yaml

- runFlow:
    env:
      eventIndex: 0
      eventExists: true
    file: ../../common/calendar/VerifyEvent.yaml

- runFlow:
    env:
      eventIndex: 1
      eventExists: true
    file: ../../common/calendar/VerifyEvent.yaml

- runFlow:
    env:
      eventIndex: 2
      eventExists: true
    file: ../../common/calendar/VerifyEvent.yaml

