appId: ${appId}
env:
  habitname: "Test Permissions"
onFlowStart:
  - runFlow: ../env.yaml
---
- launchApp:
    clearState: true
    permissions: 
        all: unset

- runFlow: subFlows/name-flow.yaml

- runFlow: subFlows/single-day-flow.yaml

# Create Habit
- assertVisible: ${buttonNewHabitCreate}
- tapOn: ${buttonNewHabitCreate}

# Accept Calendar Permissions
- assertVisible: "Allow Full Access"
