appId: ${appId}
env:
  habitname: "Habit Single Day All Day Calendar"
onFlowStart:
  - runFlow: ../env.yaml
---
- launchApp:
    clearState: true

- runFlow: subFlows/name-flow.yaml

- runFlow: subFlows/single-day-flow.yaml

# Create Habit
- assertVisible: ${buttonNewHabitCreate}
- tapOn: ${buttonNewHabitCreate}

# Verify Habit was created
- assertVisible: ${buttonHomeAdd}
- assertVisible: ${habitname}

- runFlow: subFlows/calendar/open-calendar.yaml

# Verify that habit was added to Calendar
- assertVisible: ${habitname}
